# minuteman

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: app.rs  mod.rs  ui.rs
src/clone/: mod.rs
src/disk/: linux.rs  mod.rs
src/ui/: mod.rs  ui.rs
src/util/: mod.rs
