[package]
name = "minuteman"
version = "0.1.0"
authors = ["codycline <codycline@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.15.0"
termion = "1.0.0"
rand = "0.8.0"
sysinfo = "0.17.2"
argh = "0.1.4"
strum = "0.20.0"
strum_macros ="0.20.0"