[package]
name = "minuteman"
version = "0.1.0"
authors = ["codycline <codycline@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.15.0"
termion = "1.0.0"
anyhow = "1.0.40"
rand = "0.8.0"
argh = "0.1.4"
libc = "0.2"
regex = "1.0.0"


[target.'cfg(unix)'.dependencies]
sysfs-class = "0.1.3"
nix = "0.20.0"